--- a/index.html
+++ b/index.html
@@ -1,24 +1,26 @@
 <html>
 
 <head>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/8dba7f6f02.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body>
     <!-- Inside the body we will define the content of the page. -->
-    <div class="card text-center">
-        <div class="card-header">
+    <div class="card text-start">
+        <h1 class="card-header">
             Payment form example
-        </div>
+        </h1>
         <div class="card-body">
             <form>
                 <div class="row mb-2">
                     <div class="col-12">
                         <div class="alert alert-danger" role="alert">
-                            Some firelds are missing
-                          </div>                          
+                            Some fields are missing
+                        </div>
                     </div>
                 </div>
                 <div class="row mb-2">
@@ -115,8 +117,15 @@
                 <div class="row mb-2">
                     <div class="col-6">
                         <label>We Accept:</label>
-                        <div>
-                            <input>
+                        <div class="bg-secondary rounded p-2" style="width: 28%;">
+                            <input type="radio">
+                            <i class="fa-brands fa-cc-mastercard me-2"></i>
+                            <input type="radio">
+                            <i class="fa-brands fa-cc-visa me-2"></i>
+                            <input type="radio">
+                            <i class="fa-brands fa-cc-discover me-2"></i>
+                            <input type="radio">
+                            <i class="fa-brands fa-cc-amex me-2"></i>
                         </div>
                     </div>
                     <div class="col-6">
@@ -125,12 +134,14 @@
                             <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
                                 style="height: 100px" required></textarea>
                         </div>
+                        <label class="text-muted fs-6 text">Add any notes here.</label>
                     </div>
                 </div>
             </form>
         </div>
-        <div class="card-footer text-body-secondary">
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+        <div class="card-footer text-body-secondary text-end">
+            <button type="button" class="btn btn-secondary">Cancel</button>
+            <button type="button" class="btn btn-primary">Send</button>
         </div>
     </div>
 
